--- a/aws/aws-ec2-networking.yaml
+++ b/aws/aws-ec2-networking.yaml
@@ -81,16 +81,16 @@ Outputs:
     Description: Public subnet A reference
     Value: !Ref PublicSubnetA
     Export:
-      Name: !Sub ${AWS::StackName}-subnet-a
+      Name: !Sub "${AWS::StackName}-subnet-a"
 
   PublicSubnetBReference:
     Description: Public subnet B reference
     Value: !Ref PublicSubnetB
     Export:
-      Name: !Sub ${AWS::StackName}-subnet-b
+      Name: !Sub "${AWS::StackName}-subnet-b"
 
   VPCReference:
     Description: VPC reference
     Value: !Ref VPC
     Export:
-      Name: !Sub ${AWS::StackName}-vpc
+      Name: !Sub "${AWS::StackName}-vpc"
