Update test.yaml aws-ec2-networking.yaml working EC2 and security group deployment on custom non-default VPC and subnets.

--- a/aws/aws-ec2-networking.yaml
+++ b/aws/aws-ec2-networking.yaml
@@ -41,6 +41,7 @@ Resources:
         - Key: Name
           Value: !Sub "${AWS::StackName}-public-a"
       VpcId: !Ref VPC
+      MapPublicIpOnLaunch: true
 
   PublicSubnetARouteTableAssociation:
     Type: "AWS::EC2::SubnetRouteTableAssociation"
