--- a/aws/aws-ec2-compute.yaml
+++ b/aws/aws-ec2-compute.yaml
@@ -1,67 +1,11 @@
 AWSTemplateFormatVersion: "2010-09-09"
 
-Description: "AWS CloudFormation Sample Template AutoScalingMultiAZWithNotifications: Create a multi-az, load balanced and Auto Scaled sample web site running on an Apache Web Serever. The application is configured to span all Availability Zones in the region and is Auto-Scaled based on the CPU utilization of the web servers. Notifications will be sent to the operator email address on scaling events. The instances are load balanced with a simple health check against the default web page. **WARNING** This template creates one or more Amazon EC2 instances and an Application Load Balancer. You will be billed for the AWS resources used if you create a stack from this template."
+Description: "Compute layer for EC2 instances for TinyDevCRM"
 
 Parameters:
   InstanceType:
     Type: String
     Default: t2.small
-    AllowedValues:
-      - t1.micro
-      - t2.nano
-      - t2.micro
-      - t2.small
-      - t2.medium
-      - t2.large
-      - m1.small
-      - m1.medium
-      - m1.large
-      - m1.xlarge
-      - m2.xlarge
-      - m2.2xlarge
-      - m2.4xlarge
-      - m3.medium
-      - m3.large
-      - m3.xlarge
-      - m3.2xlarge
-      - m4.large
-      - m4.xlarge
-      - m4.2xlarge
-      - m4.4xlarge
-      - m4.10xlarge
-      - c1.medium
-      - c1.xlarge
-      - c3.large
-      - c3.xlarge
-      - c3.2xlarge
-      - c3.4xlarge
-      - c3.8xlarge
-      - c4.large
-      - c4.xlarge
-      - c4.2xlarge
-      - c4.4xlarge
-      - c4.8xlarge
-      - g2.2xlarge
-      - g2.8xlarge
-      - r3.large
-      - r3.xlarge
-      - r3.2xlarge
-      - r3.4xlarge
-      - r3.8xlarge
-      - i2.xlarge
-      - i2.2xlarge
-      - i2.4xlarge
-      - i2.8xlarge
-      - d2.xlarge
-      - d2.2xlarge
-      - d2.4xlarge
-      - d2.8xlarge
-      - hi1.4xlarge
-      - hs1.8xlarge
-      - cr1.8xlarge
-      - cc2.8xlarge
-      - cg1.4xlarge
-    ConstraintDescription: must be a valid EC2 instance type.
     Description: WebServer EC2 instance type
 
   KeyName:
@@ -86,290 +30,30 @@ Parameters:
 
   Subnets:
     Type: "List<AWS::EC2::Subnet::Id>"
+    Default:
+        - !ImportValue 'tinydevcrm-ec2-networking-subnet-a'
+        - !ImportValue 'tinydevcrm-ec2-networking-subnet-b'
     ConstraintDescription: must be a list of at least two existing subnets associated with at least two different availability zones. They should be residing in the selected Virtual Private Cloud.
     Description: The list of SubnetIds in your Virtual Private Cloud (VPC)
 
   VpcId:
     Type: "AWS::EC2::VPC::Id"
-    Default: vpc-036fae827a8d075b0
-    ConstraintDescription: must be the VPC Id of an existing Virtual Private Cloud.
+    Default: !ImportValue 'tinydevcrm-ec2-networking-vpc'
     Description: VpcId of your existing Virtual Private Cloud (VPC)
 
 Mappings:
   AWSInstanceType2Arch:
-    c1.medium:
-      Arch: HVM64
-    c1.xlarge:
-      Arch: HVM64
-    c3.2xlarge:
-      Arch: HVM64
-    c3.4xlarge:
-      Arch: HVM64
-    c3.8xlarge:
-      Arch: HVM64
-    c3.large:
-      Arch: HVM64
-    c3.xlarge:
-      Arch: HVM64
-    c4.2xlarge:
-      Arch: HVM64
-    c4.4xlarge:
-      Arch: HVM64
-    c4.8xlarge:
-      Arch: HVM64
-    c4.large:
-      Arch: HVM64
-    c4.xlarge:
-      Arch: HVM64
-    cc2.8xlarge:
-      Arch: HVM64
-    cr1.8xlarge:
-      Arch: HVM64
-    d2.2xlarge:
-      Arch: HVM64
-    d2.4xlarge:
-      Arch: HVM64
-    d2.8xlarge:
-      Arch: HVM64
-    d2.xlarge:
-      Arch: HVM64
-    g2.2xlarge:
-      Arch: HVMG2
-    g2.8xlarge:
-      Arch: HVMG2
-    hi1.4xlarge:
-      Arch: HVM64
-    hs1.8xlarge:
-      Arch: HVM64
-    i2.2xlarge:
-      Arch: HVM64
-    i2.4xlarge:
-      Arch: HVM64
-    i2.8xlarge:
-      Arch: HVM64
-    i2.xlarge:
-      Arch: HVM64
-    m1.large:
-      Arch: HVM64
-    m1.medium:
-      Arch: HVM64
-    m1.small:
-      Arch: HVM64
-    m1.xlarge:
-      Arch: HVM64
-    m2.2xlarge:
-      Arch: HVM64
-    m2.4xlarge:
-      Arch: HVM64
-    m2.xlarge:
-      Arch: HVM64
-    m3.2xlarge:
-      Arch: HVM64
-    m3.large:
-      Arch: HVM64
-    m3.medium:
-      Arch: HVM64
-    m3.xlarge:
-      Arch: HVM64
-    m4.10xlarge:
-      Arch: HVM64
-    m4.2xlarge:
-      Arch: HVM64
-    m4.4xlarge:
-      Arch: HVM64
-    m4.large:
-      Arch: HVM64
-    m4.xlarge:
-      Arch: HVM64
-    r3.2xlarge:
-      Arch: HVM64
-    r3.4xlarge:
-      Arch: HVM64
-    r3.8xlarge:
-      Arch: HVM64
-    r3.large:
-      Arch: HVM64
-    r3.xlarge:
-      Arch: HVM64
-    t1.micro:
-      Arch: HVM64
-    t2.large:
-      Arch: HVM64
-    t2.medium:
-      Arch: HVM64
-    t2.micro:
-      Arch: HVM64
-    t2.nano:
-      Arch: HVM64
     t2.small:
       Arch: HVM64
 
   AWSInstanceType2NATArch:
-    c1.medium:
-      Arch: NATHVM64
-    c1.xlarge:
-      Arch: NATHVM64
-    c3.2xlarge:
-      Arch: NATHVM64
-    c3.4xlarge:
-      Arch: NATHVM64
-    c3.8xlarge:
-      Arch: NATHVM64
-    c3.large:
-      Arch: NATHVM64
-    c3.xlarge:
-      Arch: NATHVM64
-    c4.2xlarge:
-      Arch: NATHVM64
-    c4.4xlarge:
-      Arch: NATHVM64
-    c4.8xlarge:
-      Arch: NATHVM64
-    c4.large:
-      Arch: NATHVM64
-    c4.xlarge:
-      Arch: NATHVM64
-    cc2.8xlarge:
-      Arch: NATHVM64
-    cr1.8xlarge:
-      Arch: NATHVM64
-    d2.2xlarge:
-      Arch: NATHVM64
-    d2.4xlarge:
-      Arch: NATHVM64
-    d2.8xlarge:
-      Arch: NATHVM64
-    d2.xlarge:
-      Arch: NATHVM64
-    g2.2xlarge:
-      Arch: NATHVMG2
-    g2.8xlarge:
-      Arch: NATHVMG2
-    hi1.4xlarge:
-      Arch: NATHVM64
-    hs1.8xlarge:
-      Arch: NATHVM64
-    i2.2xlarge:
-      Arch: NATHVM64
-    i2.4xlarge:
-      Arch: NATHVM64
-    i2.8xlarge:
-      Arch: NATHVM64
-    i2.xlarge:
-      Arch: NATHVM64
-    m1.large:
-      Arch: NATHVM64
-    m1.medium:
-      Arch: NATHVM64
-    m1.small:
-      Arch: NATHVM64
-    m1.xlarge:
-      Arch: NATHVM64
-    m2.2xlarge:
-      Arch: NATHVM64
-    m2.4xlarge:
-      Arch: NATHVM64
-    m2.xlarge:
-      Arch: NATHVM64
-    m3.2xlarge:
-      Arch: NATHVM64
-    m3.large:
-      Arch: NATHVM64
-    m3.medium:
-      Arch: NATHVM64
-    m3.xlarge:
-      Arch: NATHVM64
-    m4.10xlarge:
-      Arch: NATHVM64
-    m4.2xlarge:
-      Arch: NATHVM64
-    m4.4xlarge:
-      Arch: NATHVM64
-    m4.large:
-      Arch: NATHVM64
-    m4.xlarge:
-      Arch: NATHVM64
-    r3.2xlarge:
-      Arch: NATHVM64
-    r3.4xlarge:
-      Arch: NATHVM64
-    r3.8xlarge:
-      Arch: NATHVM64
-    r3.large:
-      Arch: NATHVM64
-    r3.xlarge:
-      Arch: NATHVM64
-    t1.micro:
-      Arch: NATHVM64
-    t2.large:
-      Arch: NATHVM64
-    t2.medium:
-      Arch: NATHVM64
-    t2.micro:
-      Arch: NATHVM64
-    t2.nano:
-      Arch: NATHVM64
     t2.small:
       Arch: NATHVM64
 
   AWSRegionArch2AMI:
-    ap-northeast-1:
-      HVM64: ami-00a5245b4816c38e6
-      HVMG2: ami-09d0e0e099ecabba2
-    ap-northeast-2:
-      HVM64: ami-00dc207f8ba6dc919
-      HVMG2: NOT_SUPPORTED
-    ap-northeast-3:
-      HVM64: ami-0b65f69a5c11f3522
-      HVMG2: NOT_SUPPORTED
-    ap-south-1:
-      HVM64: ami-0ad42f4f66f6c1cc9
-      HVMG2: ami-0244c1d42815af84a
-    ap-southeast-1:
-      HVM64: ami-05b3bcf7f311194b3
-      HVMG2: ami-0e46ce0d6a87dc979
-    ap-southeast-2:
-      HVM64: ami-02fd0b06f06d93dfc
-      HVMG2: ami-0c0ab057a101d8ff2
-    ca-central-1:
-      HVM64: ami-07423fb63ea0a0930
-      HVMG2: NOT_SUPPORTED
-    cn-north-1:
-      HVM64: ami-053617c9d818c1189
-      HVMG2: NOT_SUPPORTED
-    cn-northwest-1:
-      HVM64: ami-0f7937761741dc640
-      HVMG2: NOT_SUPPORTED
-    eu-central-1:
-      HVM64: ami-0cfbf4f6db41068ac
-      HVMG2: ami-0aa1822e3eb913a11
-    eu-north-1:
-      HVM64: ami-86fe70f8
-      HVMG2: ami-32d55b4c
-    eu-west-1:
-      HVM64: ami-08935252a36e25f85
-      HVMG2: ami-0d5299b1c6112c3c7
-    eu-west-2:
-      HVM64: ami-01419b804382064e4
-      HVMG2: NOT_SUPPORTED
-    eu-west-3:
-      HVM64: ami-0dd7e7ed60da8fb83
-      HVMG2: NOT_SUPPORTED
-    sa-east-1:
-      HVM64: ami-05145e0b28ad8e0b2
-      HVMG2: NOT_SUPPORTED
     us-east-1:
       HVM64: ami-0080e4c5bc078760e
       HVMG2: ami-0aeb704d503081ea6
-    us-east-2:
-      HVM64: ami-0cd3dfa4e37921605
-      HVMG2: NOT_SUPPORTED
-    us-west-1:
-      HVM64: ami-0ec6517f6edbf8044
-      HVMG2: ami-0a7fc72dc0e51aa77
-    us-west-2:
-      HVM64: ami-01e24be29428c15b2
-      HVMG2: ami-0fe84a5b4563d8f27
 
   Region2Examples:
     ap-northeast-1:
