Update Makefile add lifecycle methods for aws-ecs.yaml.

--- a/aws/Makefile
+++ b/aws/Makefile
@@ -54,3 +54,12 @@ deploy-ecr:
 
 delete-ecr:
 	aws cloudformation delete-stack --stack-name tinydevcrm-ecr
+
+create-ecs:
+	aws cloudformation create-stack --stack-name tinydevcrm-ecs --template-body file://aws-ecs.yaml --capabilities CAPABILITY_NAMED_IAM
+
+deploy-ecs:
+	aws cloudformation deploy --stack-name tinydevcrm-ecs --template-file aws-ecs.yaml --capabilities CAPABILITY_NAMED_IAM
+
+delete-ecs:
+	aws cloudformation delete-stack --stack-name tinydevcrm-ecs
