--- a/aws/aws-ecs.yaml
+++ b/aws/aws-ecs.yaml
@@ -3,7 +3,7 @@ AWSTemplateFormatVersion: "2010-09-09"
 Description: AWS Elastic Container Service (ECS) definition for TinyDevCRM
 
 Resources:
-    ApplicationCluster:
-        Type: AWS::ECS::Cluster
-        Properties:
-            ClusterName: !Sub ${AWS::StackName}-cluster
+  ApplicationCluster:
+    Type: "AWS::ECS::Cluster"
+    Properties:
+      ClusterName: !Sub "${AWS::StackName}-cluster"
