Update aws-ec2-persist.yaml create EFS resource.

--- a/aws/aws-ec2-persist.yaml
+++ b/aws/aws-ec2-persist.yaml
@@ -14,3 +14,10 @@ Resources:
         - Key: Name
           Value: tinydevcrm-ebs
       VolumeType: gp2
+
+  ApplicationEFSFilesystem:
+    Type: "AWS::EFS::FileSystem"
+    Properties:
+      FileSystemTags:
+        - Key: Name
+          Value: tinydevcrm-efs
